# dep-test

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
